# ace3

./: .gitignore  .ignore  BUGS.md  CHANGELOG.md  CORRELATION_HUNTS.md  Dockerfile  Makefile  ace  ace_api.py  alembic_analysis_cache.ini  api_uvicorn.py  docker-compose.override.yml  docker-compose.yml  msgraph.pfx
api_client/: .gitignore  MANIFEST.in  README.md  openapi-python-client-config.yaml  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
api_client/aceapi_v2_client/: __init__.py  auth.py
api_client/aceapi_v2_client/api/alerts/: bulk_add_observable_alerts_bulk_add_observable_post.py  download_alert_alerts_alert_uuid_download_get.py  view_alert_logs_alerts_alert_uuid_logs_get.py
api_client/aceapi_v2_client/api/authentication/: login_for_access_token_auth_token_post.py  refresh_access_token_auth_refresh_post.py
api_client/aceapi_v2_client/api/common/: ping_common_ping_get.py  supported_api_version_common_supported_api_version_get.py  valid_companies_common_valid_companies_get.py  valid_directives_common_valid_directives_get.py  valid_observables_common_valid_observables_get.py
api_client/aceapi_v2_client/api/events/: export_events_events_export_get.py  open_events_events_open_get.py  update_event_status_events_event_id_patch.py
api_client/aceapi_v2_client/models/: __init__.py  body_login_for_access_token_auth_token_post.py  bulk_add_observable_request.py  bulk_add_observable_result.py  bulk_add_observable_result_failed_details.py  collector_status_read.py  company_read.py  event_read.py  export_format.py  health_response.py  list_response_company_read.py  list_response_event_read.py  list_response_named_description_read.py  list_response_node_read.py  list_response_observable_comment_read.py  list_response_observable_type_read.py  list_response_threat_read.py  list_response_threat_type_read.py  named_description_read.py  node_read.py  observable_comment_create.py  observable_comment_read.py  observable_comment_update.py  observable_type_read.py  ping_response.py  refresh_request.py  set_interesting_observables_interesting_patch_response_set_interesting_observables_interesting_patch.py  set_interesting_request.py  status_update.py  supported_api_version_response.py  threat_create.py  threat_read.py  threat_type_create.py  threat_type_read.py  threat_type_update.py  token.py
api_client/scripts/: regenerate.sh
api_client/tests/: test_smoke.py
lib/hunt_compiler/: pyproject.toml
lib/hunt_compiler/hunt_compiler/: compiler.py
lib/hunt_compiler/tests/: conftest.py  test_compiler.py  test_loader.py
lib/signature_validator/: pyproject.toml
lib/signature_validator/hunt_compiler/: __init__.py  _yaml_utils.py  compiler.py  loader.py  models.py  validate.py
lib/signature_validator/tests/: conftest.py  test_compiler.py  test_loader.py  test_models.py  test_validate.py
(+514 files in other folders)
