[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aceapi-v2-client"
version = "2.0.0"
description = "Python client library for the ACE (Analysis Correlation Engine) API v2"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "ACE Collective" }]
keywords = ["ace", "analysis-correlation-engine", "security", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/ACE-Collective/ace"
Repository = "https://github.com/ACE-Collective/ace"
Issues = "https://github.com/ACE-Collective/ace/issues"

[tool.pytest.ini_options]
# self-contained config so the smoke test runs the same whether this package is
# checked out standalone or sits inside the parent ACE repository
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["aceapi_v2_client"]

[tool.hatch.build.targets.sdist]
# include the vendored schema and regeneration tooling in the source distribution
include = [
    "aceapi_v2_client",
    "openapi.json",
    "openapi-python-client-config.yaml",
    "scripts",
    "tests",
    "requirements.txt",
    "requirements-dev.txt",
    "README.md",
    "LICENSE",
]
