[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunt-compiler"
version = "1.0.0"
description = "Compiler for ACE hunt definitions - produces self-contained, serializable intermediate format"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
