[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signature-validator"
version = "1.0.0"
description = "Compiler and validator for ACE signature definitions"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pyyaml",
    "requests",
    "urllib3",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
p12 = [
    "requests-pkcs12",
]

[project.scripts]
validate-hunt = "hunt_compiler.validate:main"
